# python_repo_template

./: .gitignore  Makefile  Makefile.docker  Makefile.env.win.sample  Makefile.jupyter  Makefile.python  Makefile.python.build  README.md  dev-requirements.txt  make.md  requirements.txt  sample.bashrc  setup.cfg  setup.py
.mf_support/: Makefile.python
mf_support/: Makefile.env.bak  Makefile.env.sample  Makefile.env.win.sample  Makefile.jupyter  Makefile.python  Makefile.python.build
