# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2021 Troy Williams

# uuid  :
# author: Troy Williams
# email : troy.williams@bluebill.net
# date  :
# -----------

[metadata]
name = packagename
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Extract information from email
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    click
    appdirs
include_package_data = True
python_requires = >=3.9

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    extract=ee.extract_email:main


# ----------
# flake 8 configuration

# https://cthoyt.com/2020/04/25/how-to-code-with-me-flake8.html
# https://flake8.pycqa.org/en/latest/user/configuration.html

# Unfortunately, this is an old system. It looks like pyproject.toml will be the cfg in the future: https://www.python.org/dev/peps/pep-0518/

[flake8]
enable-extensions = G
ignore =
    # A003 ; 'id' is a python builtin, consider renaming the class attribute
    # W503 ; line break before binary operator
    # S101 ; use of assert detected (useless with pytest)
    E501 ; line too long

exclude =
    .tox,
    .git,
    .venv,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    md_docs/archive,
    tools/archive,
    output,
    tests
# import-order-style = pycharm

max-complexity = 8
max-annotations-complexity = 3
max-expression-complexity = 7
max-line-length = 120
show-source = true

# To make sure flake8-import-order knows about the name of your project
# module name, you need to specify it in tox.ini with the
# application-import-names option.
application-import-names =
    extract_email